force-app/main/default/objects/DataVault_Export_Configs__c/DataVault_Export_Configs__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>DataVault Export Configs</label>
</CustomObject>