force-app/main/default/objects/DataVault_Export_Configs__c/fields/Cloud_Platform__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Platform__c</fullName>
    <description
  >Cloud platform for backup (from DataVault_Cloud_Platform__mdt). e.g. AWS_S3.</description>
    <label>Cloud Platform</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>