force-app/main/default/objects/DataVault_Export_Configs__c/fields/Is_Export_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Export_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Export Enabled</label>
    <type>Checkbox</type>
</CustomField>