force-app/main/default/objects/DataVault_Export_Configs__c/fields/Last_Run_Completed__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Completed__c</fullName>
    <label>Last Run Completed</label>
    <type>DateTime</type>
</CustomField>