force-app/main/default/objects/DataVault_Export_Configs__c/fields/Last_Run_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Status__c</fullName>
    <label>Last Run Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>