force-app/main/default/objects/DataVault_Export_Configs__c/fields/Last_Run_Success_Count__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Success_Count__c</fullName>
    <label>Last Run Success Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>