force-app/main/default/objects/DataVault_Export_Configs__c/fields/Named_Credential_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Named Credential Name</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>